--- a/Week 3/index.html
+++ b/Week 3/index.html
@@ -46,7 +46,7 @@
 
         <h1 class="text-center mt-4">Our menu</h1>
 
-        <div class="container-fluid mb-4 mb-xs-10">
+        <div class="container-fluid mb-4 p-xs-4">
             <div class="col-12 text-bg-secondary ms-auto mt-3 me-auto p-4" id="chicken">
                 <h1>Chicken</h1>
                 <p> Fusce dignissim massa non dolor tempus tincidunt. Nullam at libero consectetur, eleifend tortor a,
