--- a/Week 3/index.html
+++ b/Week 3/index.html
@@ -29,15 +29,15 @@
                 <div class="collapse navbar-collapse bg-secondary" id="navbarSupportedContent">
                     <ul class="navbar-nav d-sm-none d-xs-block">
                         <li class="nav-item">
-                            <a class="nav-link ps-auto pe-auto" href="#chicken">Chicken</a>
+                            <a class="nav-link text-center" href="#chicken">Chicken</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link ps-auto pe-auto" href="#beef">Beef</a>
+                            <a class="nav-link text-center" href="#beef">Beef</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link ps-auto pe-auto" href="#sushi">Sushi</a>
+                            <a class="nav-link text-center" href="#sushi">Sushi</a>
                         </li>
                     </ul>
                 </div>
